@@ -19,12 +19,10 @@ import java.io.InputStreamReader;
 import java.util.ArrayList;
 import java.util.List;
 
-import org.drools.compiler.builder.impl.KnowledgeBuilderImpl.PackageMergeException;
 import org.drools.core.common.InternalAgenda;
 import org.drools.core.event.DefaultAgendaEventListener;
 import org.drools.core.impl.KnowledgeBaseFactory;
 import org.jbpm.test.util.AbstractBaseTest;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.kie.api.KieBase;
 import org.kie.api.KieBaseConfiguration;
@@ -38,6 +36,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ProcessFlowControlTest extends AbstractBaseTest {
 
@@ -57,8 +56,8 @@ public class ProcessFlowControlTest extends AbstractBaseTest {
                 builder.getErrors().getErrors().length);
 
         KogitoProcessRuntime kruntime = createKogitoProcessRuntime();
-        List<Integer> inList = new ArrayList<Integer>();
-        List<Integer> outList = new ArrayList<Integer>();
+        List<Integer> inList = new ArrayList<>();
+        List<String> outList = new ArrayList<>();
         kruntime.getKieSession().setGlobal("inList",
                 inList);
         kruntime.getKieSession().setGlobal("outList",
@@ -83,7 +82,7 @@ public class ProcessFlowControlTest extends AbstractBaseTest {
                 outList.get(3));
 
         outList.clear();
-        inList.remove(new Integer(1));
+        inList.remove(Integer.valueOf(1));
         kruntime.getKieSession().update(handle,
                 inList);
         kruntime.startProcess("ConstraintDialects");
@@ -97,7 +96,7 @@ public class ProcessFlowControlTest extends AbstractBaseTest {
                 outList.get(2));
 
         outList.clear();
-        inList.remove(new Integer(6));
+        inList.remove(Integer.valueOf(6));
         kruntime.getKieSession().update(handle,
                 inList);
         kruntime.startProcess("ConstraintDialects");
@@ -109,7 +108,7 @@ public class ProcessFlowControlTest extends AbstractBaseTest {
                 outList.get(1));
 
         outList.clear();
-        inList.remove(new Integer(3));
+        inList.remove(Integer.valueOf(3));
         kruntime.getKieSession().update(handle,
                 inList);
         kruntime.startProcess("ConstraintDialects");
@@ -119,7 +118,7 @@ public class ProcessFlowControlTest extends AbstractBaseTest {
                 outList.get(0));
 
         outList.clear();
-        inList.remove(new Integer(25));
+        inList.remove(Integer.valueOf(25));
         kruntime.getKieSession().update(handle,
                 inList);
         KogitoProcessInstance processInstance = kruntime.startProcess("ConstraintDialects");
@@ -273,60 +272,21 @@ public class ProcessFlowControlTest extends AbstractBaseTest {
         // adding ruleflow before adding package
         builder.addRuleFlow(new InputStreamReader(getClass().getResourceAsStream("ruleflow.rfm")));
         builder.addPackageFromDrl(new InputStreamReader(getClass().getResourceAsStream("ruleflow.drl")));
-        builder.getPackages();
+        assertTrue(builder.getPackages().length > 0);
     }
 
     @Test
     public void testLoadingRuleFlowInPackage2() throws Exception {
         // only adding ruleflow
         builder.addRuleFlow(new InputStreamReader(getClass().getResourceAsStream("ruleflow.rfm")));
-        builder.getPackages();
+        assertTrue(builder.getPackages().length > 0);
     }
 
     @Test
     public void testLoadingRuleFlowInPackage3() throws Exception {
         // only adding ruleflow without any generated rules
         builder.addRuleFlow(new InputStreamReader(getClass().getResourceAsStream("empty_ruleflow.rfm")));
-        builder.getPackages();
-    }
-
-    @Test
-    @Disabled
-    public void FIXME_testLoadingRuleFlowInPackage4() throws Exception {
-        // adding ruleflows of different package
-        builder.addRuleFlow(new InputStreamReader(getClass().getResourceAsStream("empty_ruleflow.rfm")));
-        try {
-            builder.addRuleFlow(new InputStreamReader(getClass().getResourceAsStream("ruleflow.rfm")));
-            throw new Exception("An exception should have been thrown.");
-        } catch (PackageMergeException e) {
-            // do nothing
-        }
-    }
-
-    @Test
-    @Disabled
-    public void FIXME_testLoadingRuleFlowInPackage5() throws Exception {
-        // adding ruleflow of different package than rules
-        builder.addPackageFromDrl(new InputStreamReader(getClass().getResourceAsStream("ruleflow.drl")));
-        try {
-            builder.addRuleFlow(new InputStreamReader(getClass().getResourceAsStream("empty_ruleflow.rfm")));
-            throw new Exception("An exception should have been thrown.");
-        } catch (PackageMergeException e) {
-            // do nothing
-        }
-    }
-
-    @Test
-    @Disabled
-    public void FIXME_testLoadingRuleFlowInPackage6() throws Exception {
-        // adding rules of different package than ruleflow
-        builder.addRuleFlow(new InputStreamReader(getClass().getResourceAsStream("empty_ruleflow.rfm")));
-        try {
-            builder.addPackageFromDrl(new InputStreamReader(getClass().getResourceAsStream("ruleflow.drl")));
-            throw new Exception("An exception should have been thrown.");
-        } catch (PackageMergeException e) {
-            // do nothing
-        }
+        assertTrue(builder.getPackages().length > 0);
     }
 
     @Test
